--- a/b1s3.md
+++ b/b1s3.md
@@ -64,3 +64,34 @@ Una vez que termine la primera parte (a lápiz y papel), debe presentar su traba
 - 7 puntos presenta en el horario de tutoría
 
 La hora máxima de presentación será las 09h20
+
+ACTIVIDAD RESUELTA CON LA FUNCION Y LAS AREAS (Alex Jadan)
+```scala
+//CALCULAR AREA DE UN TRIANGULO
+//FUNCION PARA CALCULAR LAS AREAS
+def calcArea(f:(Double,Double,Double)=>Double, a:Double,b:Double,c:Double)=f(a,b,c)
+//area: (b*h)/2
+val areaTriangle=(b:Double,h:Double,c:Double)=>(b*h)/2.0
+calcArea(areaTriangle, 8.7, 5.4, 0)
+//area: b*h
+val areaParalelogramo=(b:Double,h:Double,c:Double)=>b*h
+calcArea(areaParalelogramo, 5, 6, 0)
+//area: l^2
+val areaCuadrado=(a:Double,b:Double,c:Double)=>math.pow(a,2)
+calcArea(areaCuadrado, 2, 0, 0)
+//area: b*h
+val areaRectangulo=(b:Double,h:Double,c:Double)=>b*h
+calcArea(areaRectangulo, 6, 9, 0)
+//area: (D*d)/2
+val areaRombo=(D:Double,d:Double,c:Double)=>(D*d)/2
+calcArea(areaRombo, 6.5, 4.5, 0)
+//area: ((B+b)*h)/2
+val areaTrapecio=(B:Double,b:Double,h:Double)=>((B+b)*h)/2
+calcArea(areaTrapecio, 9, 7, 5)
+//area: (p*a)/2
+val areaPoligono_reg=(p:Double,a:Double,c:Double)=>(p*a)/2
+calcArea(areaPoligono_reg, 6.6, 5, 0)
+//area: pi*r^2
+val areaCirculo=(r:Double,b:Double,c:Double)=>3.1415*math.pow(r,2)
+calcArea(areaCirculo, 9.8, 0, 0)
+```
