--- a/b1s4.md
+++ b/b1s4.md
@@ -70,11 +70,57 @@ r = -1: \text{ Correlación negativa perfecta.}
 \end{array}
 $$
 
+### SOLUCION
+```Scala
+//CREAR TABLA
+// | peso (kg)| Tension sistolica |
+val data = List(
+  (72,160),
+  (76,155),
+  (78,150),
+  (81,145),
+  (89,140),
+  (95,135),
+  (108,130),
+  (115,125),
+  (120,120),
+  (130,115)
+)
+
+//FORMULA PARA CALCULAR MEDIA DE X, Y
+val media_x= data.map(_._1).sum.toDouble / data.length
+val media_y= data.map(_._2).sum.toDouble / data.length
+
+//CALCULAR NUMERADOR Y DENOMINADOR
+val numerador=data.map(row=>(row._1 - media_x) * (row._2 - media_y)).sum
+//DENOMINADOR EN X
+val denominador_1=data.map(row=>math.pow(row._1-media_x,2)).sum
+//DENOMINADOR EN Y
+val denominador_2=data.map(row=>math.pow(row._2-media_y,2)).sum
+//CALCULAR COEFICIENTE DE PEARSON
+val correlacion=numerador/ (math.sqrt(denominador_1)*math.sqrt(denominador_2))
+```
+
 ### Preguntas a resolver
-1. ¿El coeficiente de correlación es positivo o negativo?
-2. ¿Qué se puede concluir sobre la relación entre el peso y la tensión sistólica basándose en el coeficiente de correlación?
-3. Explique detalladamente lo que sucede en la línea de código donde se calcula el numerador y el denominador de la fórmula del coeficiente de correlación de Pearson.
-4. ¿Qué salida se esperaría si el coeficiente de correlación es calculado con datos donde la tensión sistólica aumenta a medida que el peso disminuye?
+
+**1. ¿El coeficiente de correlación es positivo o negativo?**
+
+El resultado es negativo
+
+r= -0.982741599901104
+
+**2. ¿Qué se puede concluir sobre la relación entre el peso y la tensión sistólica basándose en el coeficiente de correlación?**
+ 
+Se puede concluir que a medida que el peso de una persona aumenta, la tensión tiende a disminuir.
+
+**3. Explique detalladamente lo que sucede en la línea de código donde se calcula el numerador y el denominador de la fórmula del coeficiente de correlación de Pearson.**
+
+**Numerador:** Se ubica en la lista para mapear los datos donde se separan entre paréntesis el calculo de datos que se centran en calcular el valor dado menos la media, esto se aplica en un calculo para x y otro en y para luego multiplicarlos.
+**Denominador:** Se divide en dos variables para X y Y, ambos funcionan bajo el mismo método, en la sumatoria mapear cada valor de la lista para restarlo por la media (sea x o y) y despues elevar ese resultado al cuadrado.
+
+**4. ¿Qué salida se esperaría si el coeficiente de correlación es calculado con datos donde la tensión sistólica aumenta a medida que el peso disminuye?**
+
+El coeficiente de correlación seria positivo.
 
 ### Ejercicio 2
 Definir una función `at100` de tipo `List[List[Int]]` que devuelve un dato de tipo `List[List[Int]]`, seleccionando solo aquellas listas internas cuyo valor más grande sea al menos 100.
@@ -82,6 +128,8 @@ Definir una función `at100` de tipo `List[List[Int]]` que devuelve un dato de t
 ```Scala
 def at100(lists: List[List[Int]]): List[List[Int]] = {
   // completar
+   // Condicion para filtrar solo las listas cuyot valor se mayor o igual a 100
+  lists.filter(x=> (x.max >=100))
 }
 
 // Prueba de la función
