--- a/b2s9.md
+++ b/b2s9.md
@@ -30,6 +30,9 @@ Sensor1: 24°C, Sensor2: 34°C, Difference: 10°C
 🚨 ALERT! Significant difference detected: 10°C
 ```
 
+![image](https://github.com/user-attachments/assets/d0d43111-e1f2-4128-9453-408b1db91b98)
+
+
 ### Problema 2
 **Sistema de Alerta Complejo**
 
