--- a/b2s10.md
+++ b/b2s10.md
@@ -25,7 +25,27 @@ Suma actual = 20
 Suma actual = 40
 ```
 
+**Codigo:**
+```scala
+package bim2_sem10
+import rx._
+
+object p1_suma_num extends App{
+  val calificaciones= Var((Seq(7,8,9,6,4))) //lista de calificaciones
+  val b = Rx{"Suma Actual: "+calificaciones().sum} //suma del total de calificaciones
+
+  println(b.now)
+  calificaciones() = calificaciones.now :+ 10 // Agrega una calificación
+  println(b.now)
+  calificaciones() = calificaciones.now :+ 20 // Agrega otra calificación
+  println(b.now)
+}
+```
+
 > Adjuntar capturas de ejecución
+
+![image](https://github.com/user-attachments/assets/6bd10917-5aae-4818-b2bc-1fe7ce3bfcc7)
+
 
 ### Problema 2: Cálculo de la Energía Cinética de un Vehículo
 
@@ -46,9 +66,42 @@ Crea un programa que simule el monitoreo en tiempo real de la energía cinética
    - Si la energía cinética supera un umbral dado (por ejemplo, 1 000 000, muestra un mensaje indicando:  
      **"Alerta: Energía cinética muy alta, reduzca la velocidad."**
 
+**Codigo:**
+```scala
+package bim2_sem10
+import rx._
+object p2_energia_cinetica extends App {
 
+  val m= Var(54.6) //masa
+  val v= Var(45) //Velocidad
+  val k = Rx{0.5 * m() * (v() * v())} //Calculo de la energia cinetica
+  val umbral= Var(1000000) //valor limite del umbral
+
+  val o= k.triggerLater{
+    if(k.now >umbral.now){
+      println("Alerta: Energía cinética muy alta, reduzca la velocidad. ")
+    }
+  }
+
+  println("Energia Cinetica:"+k.now)
+
+  m()=100
+  v()=238
+  println("Energia Cinetica:"+k.now)
+
+  v()=120
+  println("Energia Cinetica:"+k.now)
+
+  m()=180
+  println("Energia Cinetica:"+k.now)
+}
+
+```
 
 > Adjuntar capturas de ejecución
+
+![image](https://github.com/user-attachments/assets/6cfbf5e9-e199-40a2-b298-4b39cd1e62c7)
+
 
 ### Calificación:
 
