--- a/b2s10.md
+++ b/b2s10.md
@@ -77,30 +77,27 @@ object p2_energia_cinetica extends App {
   val k = Rx{0.5 * m() * (v() * v())} //Calculo de la energia cinetica
   val umbral= Var(1000000) //valor limite del umbral
 
-  val o= k.triggerLater{
+  val o= k.trigger{
+    println("Energia Cinetica:"+k.now)
     if(k.now >umbral.now){
       println("Alerta: Energía cinética muy alta, reduzca la velocidad. ")
     }
   }
-
-  println("Energia Cinetica:"+k.now)
-
+  //Cambios en los valores
   m()=100
+
   v()=238
-  println("Energia Cinetica:"+k.now)
 
   v()=120
-  println("Energia Cinetica:"+k.now)
 
   m()=180
-  println("Energia Cinetica:"+k.now)
 }
-
 ```
 
 > Adjuntar capturas de ejecución
 
-![image](https://github.com/user-attachments/assets/6cfbf5e9-e199-40a2-b298-4b39cd1e62c7)
+![image](https://github.com/user-attachments/assets/0ee609bf-875c-48ff-80c5-24ccedfce24c)
+
 
 
 ### Calificación:
