--- a/b2s11.md
+++ b/b2s11.md
@@ -26,16 +26,72 @@
   - ¿Cuántos ﬁlas son `Right`?
   - ¿Cuántos ﬁlas son `Left`?
 
+```scala
+  // ¿Cuántas filas pudo leer ?
+  println(s"Ha leido un total de: $filas_total Filas")
+  //¿Cuántos filas son Right ?
+  println(s"Tiene un total de: $len_rows_ok Filas Right")
+  //¿Cuántos filas son Left ?
+  println(s"Tiene un total de: $len_rows_fail Filas Left")
+```
+
+
 - Ahora modiﬁque el case class para que el atributo runtime sea del tipo
 `Option[Double]` y vuelva a responder las preguntas anteriores.
 
+```scala
+  //Se agrego el getorelse para que el option trabaje de manera eficiuente debido a que en los none no puede sumar por lo tanto generaba un error
+  //val sum_runtime = rows_good.map(_.runtime).sum
+  val sum_runtime = rows_ok.map(_.runtime.getOrElse(0.0)).sum
+  println(s"Suma de runtime: $sum_runtime")
 
-> Adjuntar código y capturas de ejecución
+  val max_runtime = rows_ok.map(_.runtime).max
+  println(s"Max. de runtime: $max_runtime")
+```
+
+Salida esperada:
+
+![image](https://github.com/user-attachments/assets/cee61dd7-ce03-4aef-90f8-65991f211c9c)
+
 
 ### Parte 2: Análisis de datos
 
 - Filtra aquellas películas cuyo `revenue` sea mayor al promedio de los ingresos del conjunto de datos.
+
+```scala
+  println("Peliculas Con Revenue Mayor al Promedio:")
+  // Calcular el promedio de revenue
+  val promedio_revenue = rows_ok.map(_.revenue).sum.toDouble / rows_ok.length
+  println(s"Promedio de revenue: $promedio_revenue")
+
+  // Filtrar películas cuyo revenue es mayor que el promedio
+  val peliculasMayorQuePromedio = rows_ok.filter(_.revenue > promedio_revenue).take(5)
+
+  // Mostrar las películas con mayor revenue que el promedio
+  peliculasMayorQuePromedio.foreach(pelicula => println(pelicula.title + " - Revenue: " + pelicula.revenue))
+
+```
+
+Salida esperada:
+
+![image](https://github.com/user-attachments/assets/d4489311-f664-4192-9f4a-ae1f94b74bec)
+
+
+
 - Cuenta cuántas películas tienen el atributo `adult` configurado como `true`.
+
+```scala
+  //Cuenta cuántas películas tienen el atributo adult configurado como true.
+  val adultT= rows_ok.count(_.adult ==true)
+  println(s"Atributos adult configurados como true: $adultT")
+
+```
+
+salida esperada:
+
+![image](https://github.com/user-attachments/assets/4e448b80-9504-4653-9780-481f97b9c042)
+
+
 - Calcula la varianza de las calificaciones (`vote_average`) usando la fórmula
 
   $$
@@ -43,6 +99,20 @@
   $$
 
   Donde $x_i$ es el **vote_average** de cada película, $\overline{x}$ es el promedio de las **vote_average** y $n$ es el número total de películas.
+
+```scala
+  // Calcular el promedio de vote_average
+  val promedioVoteAverage = rows_ok.map(_.vote_average).sum / rows_ok.length
+  println(s"Promedio de vote_average: $promedioVoteAverage")
+  // Calcular la varianza
+  val varianza = rows_ok.map(movie => Math.pow(movie.vote_average - promedioVoteAverage, 2)).sum / rows_ok.length
+  println(s"Varianza de las calificaciones (vote_average): $varianza")
+```
+
+salida esperada:
+
+![image](https://github.com/user-attachments/assets/f82bfc12-78f6-42a2-a908-043f0ea06aff)
+
 
 > Adjuntar los bloques de código y capturas de ejecución
 
